Project

General

Profile

Actions

Bug #36290

closed

resharding produces invalid values of bucket stats

Added by Abhishek Lekshmanan over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous, mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Seen in 12.2.7 where a manual resharding of a bucket like

$ radosgw-admin bucket stats --bucket bucket1
..
  "usage": {
        "rgw.main": {
            "size": 1740000,
            "size_actual": 2457600,
            "size_utilized": 1740000,
            "size_kb": 1700,
            "size_kb_actual": 2400,
            "size_kb_utilized": 1700,
            "num_objects": 300
        }
    },
..
$ radosgw-admin bucket reshard --bucket bucket1 

creates bucket stats with size_utilized as 0 

$ radosgw-admin bucket stats --bucket bucket1
..
    "usage": {
        "rgw.main": {
            "size": 1740000,
            "size_actual": 2457600,
            "size_utilized": 0,
            "size_kb": 1700,
            "size_kb_actual": 2400,
            "size_kb_utilized": 0,
            "num_objects": 300
        }
    },
..

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #36381: mimic: resharding produces invalid values of bucket statsResolvedAbhishek LekshmananActions
Copied to rgw - Backport #36382: luminous: resharding produces invalid values of bucket statsResolvedAbhishek LekshmananActions
Actions #1

Updated by Abhishek Lekshmanan over 5 years ago

reproducible with reshard add / dynamic resharding as well

Actions #2

Updated by Abhishek Lekshmanan over 5 years ago

  • Backport set to luminous, mimic
Actions #3

Updated by Abhishek Lekshmanan over 5 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Abhishek Lekshmanan
Actions #4

Updated by Abhishek Lekshmanan over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Abhishek Lekshmanan over 5 years ago

  • Copied to Backport #36381: mimic: resharding produces invalid values of bucket stats added
Actions #6

Updated by Abhishek Lekshmanan over 5 years ago

  • Copied to Backport #36382: luminous: resharding produces invalid values of bucket stats added
Actions #7

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF